# marcus-node

./: .env.example  README.md  local_executor.py  pyproject.toml
src/local_executor/: __init__.py  cli.py  config.py  engine.py  env_loader.py  execution.py  execution_event_transport.py  execution_state_engine.py  local_store.py  recovery_manager.py  resync_client.py  ws_client.py
tests/: conftest.py  test_contract_compatibility.py  test_engine.py  test_execution_events.py  test_resync_client.py  test_ws_client.py
tests/fixtures/contracts/: ws_ack_invalid_v1.json  ws_ack_valid_v1.json  ws_handshake_subscribe_v1.json  ws_heartbeat_v1.json  ws_signal_envelope_v1.json  ws_unsupported_v1.json
